src/components/ui/Timer.css
.timer:has([data-elapsed = "true"]){
    --default-color: rgba(var(--secondaryRGB),0.3);
    --mid-flash-color: rgba(var(--highlight-color),0.2);
    --current-color: var(--default-color);
    background-color: var(--current-color, red);

    transition-property: background-color;
    transition-duration: var(--transition-duration-medium);

    animation: flash 1s 1;
}

[data-elapsed = "true"]{
    --default-color: var(--secondary);
    --mid-flash-color: var(--text-color-negative);
    --current-color: var(--default-color);
    color: var(--current-color, red);

    transition-property: color;
    transition-duration: var(--transition-duration-medium);

    animation: flash .5s 2;
}

.timer__display{
    --open-height: 3em;
    --closed-height: 0em;

    display: flex;
    align-items: center;
    justify-content: center;

    height: var(--closed-height);

    transition-property: height;
    transition-duration: var(--transition-duration-medium);

    &[data-open = "true"]{
        height: var(--open-height);
    }

    .timer__display__text {
        font-size: 2em;
        text-align: center; 
        margin: 0;
    }
}

.timer__config{
    display: flex;
    align-items: center;
    height: 100%;
    
    button {
        height: 100%;
        width: 100%;

        margin: 0;
        transition-property: width, border-radius, filter;
        transition-duration: var(--transition-duration-medium), var(--transition-duration-fast);

        &:hover{
            border-radius: var(--default-border-radius);
            filter: brightness(0.95);
    
            transition-property: width, border-radius, filter;
            transition-duration: var(--transition-duration-medium), var(--transition-duration-fast);
        }    

        &:disabled:hover{
            border-radius: var(--mild-border-radius);
            filter: brightness(70%);
            cursor: not-allowed;
        }

        &[data-open = "true"]{
            width: 70%;
        }
    }

    input {
        width: 30%;
        height: 3em;
    }
}

@keyframes flash {
    0% {--current-color: var(--default-color)}
    50% {--current-color: var(--mid-flash-color)}
    100% {--current-color: var(--default-color)}
}

@media (max-width:900px) {
    .timer__config {
        flex-direction: row-reverse;
        height: fit-content;
        width: 100%;

        button{
            height: 2.5em;
  
            img {
                height: 100%;
            }
        }

        input{
            width: 100%;
            height: 2.5em;
        }

        & > p{
            display: none;
        }
    }

    .timer__display{
        --open-height: 2em;
        --closed-height: var(--open-height);

        .timer__display__text {
            font-size: 1.5em;
            text-align: center; 
            margin: 0;
        }
    }

    .timer{
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: row;

        height: fit-content;
    
        position: fixed;
        bottom: 5em;
        left: 0;
        padding: 0 1.5em;
        border-radius: var(--default-border-radius);
        z-index: 3;

        input {
            margin-left: 1em;
        }
    }
}

